examples/test/testpolicy13954.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy13954
  namespace: namespace111
spec:
  podSelector:
    matchLabels:
      key3: value37
      key43: value22
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key27: value46
          key35: value36
      podSelector:
        matchLabels:
          key33: value19
          key20: value44
          key22: value35
